--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "archjs",
   "version": "0.0.1",
-  "description": "Microframework",
+  "description": "Isomorphic Microframework",
+  "license": "ISC",
+  "author": "Artem Tolstykh",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "export NODE_ENV=local && nodemon"
-  },
-  "author": "Artem Tolstykh",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.4"
+    "config": "sh etc/scripts/config.sh",
+    "start": "npm run config && node index.js",
+    "develop": "npm run config && nodemon",
+    "clinic": "sh etc/scripts/clinic.sh",
+    "perform": "sh etc/scripts/perform.sh users",
+    "test": "standard"
   },
   "dependencies": {
-    "puppeteer": "^5.3.0"
-  }
+    "abstract-logging": "*",
+    "pg": "*",
+    "pino": "*",
+    "puppeteer": "*"
+  },
+  "devDependencies": {
+    "nodemon": "*",
+    "standard": "*"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "private": true
 }
