--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,21 +1,21 @@
 {
-	"short_name": "Arch",
-	"name": "ArchApp",
-	"icons": [
-		{
-			"src": "/favicon.png",
-			"type": "image/png",
-			"sizes": "128x128"
-		},
-		{
-			"src": "/arch.png",
-			"type": "image/png",
-			"sizes": "256x256"
-		}
-	],
-	"start_url": "/",
-	"background_color": "#f5f5f5",
-	"display": "standalone",
-	"scope": "/",
-	"theme_color": "#c252ac"
+  "short_name": "Arch",
+  "name": "ArchApp",
+  "icons": [
+    {
+      "src": "/favicon.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
+    {
+      "src": "/icon.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    }
+  ],
+  "start_url": "/",
+  "background_color": "#f5f5f5",
+  "display": "standalone",
+  "scope": "/",
+  "theme_color": "#fcba03"
 }
